--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -194,6 +194,8 @@
       price: "6.50 EUR"
 - name: "ΣΑΛΑΤΕΣ"
   dishes:
+    - name: "Σαλάτα"
+      price: "Μικρή / Μεγάλη"
     - name: "Σαλάτα Κουζίνα"
       price: "3.00 / 5.50 EUR"
     - name: "Πατζαροσαλάτα"
@@ -216,8 +218,6 @@
       price: "1.60 / 2.50 EUR"
     - name: "Αναφιώτικα Μαυρομάτικα"
       price: "1.50 EUR"
-    - name: "Μέγεθος Σαλάτας"
-      price: "Μικρή / Μεγάλη"
 - name: "ΑΛΟΙΦΕΣ - ΤΥΡΙΑ"
   dishes:
     - name: "Καβουροσαλάτα"
