--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Κουζίνα από Σπίτι
+title: Κουζίνα από ΣΠΙΤΙ - Χαλκίδα
 email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: >- Κάθε μέρα μαγειρεύουμε για εσάς με τον ίδιο ακριβώς τρόπο που μαγειρεύουμε για εμάς και τους δικούς μας ανθρώπους.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://kouzinaapospiti.gr/" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
+# github_username:  jekyll
 google_analytics: UA-54447212-8
 
 # Build settings
