--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Κουζίνα από ΣΠΙΤΙ - Χαλκίδα
 email: your-email@example.com
-description: >- Κάθε μέρα μαγειρεύουμε για εσάς με τον ίδιο ακριβώς τρόπο που μαγειρεύουμε για εμάς και τους δικούς μας ανθρώπους.
+description: Κάθε μέρα μαγειρεύουμε για εσάς με τον ίδιο ακριβώς τρόπο που μαγειρεύουμε για εμάς και τους δικούς μας ανθρώπους.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://kouzinaapospiti.gr/" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
